fixing layout issues

--- a/style.css
+++ b/style.css
@@ -2,16 +2,24 @@
     box-sizing: border-box;
 }
 
+
 body {
     color: white;
     background-image: url(./media/background.png);
+    background-color: #cc48af;
     background-size: cover;
+    background-repeat:no-repeat;
     height: 100 vh;
     font-family: Arial, Helvetica, sans-serif;
     overflow-y: hidden;
+    overflow-x: hidden;
 }
 
-.navbar {
+h1 {
+    font-size: 2.5rem;
+}
+
+nav {
     position: absolute;
     width: 100vw;
     left: 0;
@@ -19,56 +27,56 @@ body {
 }
 
 .primary-nav {
-    position: relative;
-    left: 5em;
-}
-
-.secondary-nav {
-    position: relative;
-    left: 400px;
-}
-
-.primary-nav form {
-    position: relative;
-    margin: 0 200px;
-    top: 1.8em;
-    left: 2em;
-}
-
-ul {
-    display: inline-flex;
-}
-
-ul li {
     list-style: none;
-    font-size: 15px;
-    padding: 0 3em;
+    display: table;
+    margin: -5px 0 0 0;
 }
 
-ul li a {
+.primary-nav a {
     text-decoration: none;
-    color: rgb(0, 0, 0);
+    color: white;
 }
 
-.container {
-    position: relative;
-    left: 5em;
-    top: 5em;
+ul > li {
+    display: inline-block;
+    margin: 0 7.3em;
+    zoom:1;
+    *display:inline;
+    /* this fix is needed for IE7- */
 }
 
-.container h1 {
-    position: relative;
-    top: 1.64em;
-    left: 1em;
-    font-size: 100px;
+.right {
+ position: relative;
+ left: 16vw;
 }
 
-.container p {
-    position: relative;
-    left: 25em;
+.right li {
+    display: inline-block;
+    margin: 0 6em 0 0;
+    zoom:1;
+    *display:inline;
 }
 
-.container::before {
+.weather-container {
+    top: 20vh;
+    left: 10vw;
+    position: absolute;
+    height: 500px;
+    width: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.weather-container h1 {
+    font-weight: 400;
+    text-transform: uppercase;
+    font-size: 90px;
+}
+
+
+.weather-container::before {
     background: rgba(0, 0, 0, 0.5);
     display: block;
     position: absolute;
@@ -79,53 +87,46 @@ ul li a {
     z-index: -1;
 }
 
-
-.search{
-    margin:7px;
+.weather-info {
+    text-align: left;
+    margin: 0 0 0 50px;
 }
 
-.search input[type=text]{
-    width:500px;
-    height:35px;
-    border-radius: 100px;
-    border-color: #f2f2f2;
-    border-width: 0.5px;
+
+.search {
+    font-size: 25px;
+    border: none;
     outline: none;
-    text-indent: 55px;
-    font-size: 17px;
+    color: white;
+} 
+
+    /* styling search bar */
+input[type=text]{
+    background: rgba(0, 0, 0, 0.25);
+    width:200px;
+    height:25px;
+    border-radius: 10px;
+    text-indent: 1.15em;
+    font-size: 0.9rem;
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: rgb(255, 255, 255);
+  opacity: 1; /* Firefox */
+}
+
+button {
+    position: relative;
+    right: 45px;
+    font-size: 0.9rem;
+    color: white;
+    background: transparent;
+    border: none;
+    cursor: pointer;
 }
 
 footer {
     position: absolute;
-    right: 5em;
-    bottom: 3em;
-}
-
-.round {
-    width: 100%;
-    border-radius: 17px;
-    border: 1px #000 solid;
-    padding: 5px 5px 5px 25px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 5;
-}
-
-.corner {
-    position: absolute;
-    top: 3px;
-    left: 5px;
-    height: 20px;
-    width: 20px;
-    z-index: 10;
-    border-radius: 10px;
-    border: none;
-    background: #000; /* Set the bg image here. with "no-repeat" */
-}
-
-.search {
-    position: relative;
-    width: 190px;
-    height: 30px;
+    top: 90vh;
+    left: 83.5vw;
 }
